# umbrella-AI-0611

./: .apirules  .codecov.yml  .cursorrules  .e2epipeline  .env.example  .gitignore  .prompts-used  LICENSE  OBSERVABILITY.md  README.md  app.py  deployment_summary_report.md  docker-compose.monitoring.yml  docker-compose.observability.yml  docker-compose.staging.yml  docker-compose.yml  interfaces.md  pyproject.toml  pytest.ini  readme-internal.md  requirements.txt  setup.py  task_decomposition.py  test_interfaces.py  test_network_isolation.sh  test_task_decomposition.py
chatbot_service/: Dockerfile  __init__.py  main.py  requirements.txt
config/: alertmanager.yml  otel-collector-config.yaml  prometheus.yml
deployment/: aws_setup.sh
docker/: Dockerfile  api_gateway.Dockerfile  base.Dockerfile  chatbot.Dockerfile  healthcheck.sh  pdf_extraction.Dockerfile  rag_scraper.Dockerfile  sentiment_analysis.Dockerfile  vector_db.Dockerfile
docs/: ALERTS.md  GEMINI_API_Examples.md  README.md  aws_free_tier_deployment.md  backup_recovery.md  deployment_summary_template.md  interfaces.md  security_hardening.md  troubleshooting_guide.md
orchestrator/: Dockerfile  requirements.txt
orchestrator_service/: Dockerfile  __init__.py  requirements.txt
pdf_extraction_service/: Dockerfile  __init__.py  requirements.txt
pdf_service/: main.py  requirements.txt
rag_scraper_service/: Dockerfile  __init__.py  requirements.txt
scraper_service/: Dockerfile  main.py  requirements.txt
scripts/: aws_setup.sh  collect_metrics.py  create_test_pdf.py  generate_test_report.py  (+16 more)
(+159 files in other folders)
